<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginVertical="@dimen/margin_vertical">

    <EditText
        android:id="@+id/search_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/cari_data"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="showResult"
        android:text="@string/cari"
        android:textColor="@color/colorNavText" />

    <TextView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/hasil_pencarian"/>

</LinearLayout>