<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/AppTheme.AppBarOverlay"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical">

        <EditText
            android:id="@+id/edit_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/judul_baru"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/edit_penerbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/penerbit_baru"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edit_penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/penulis_baru"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner"
            android:fontFamily="@font/montserrat_medium"
            android:onClick="returnReply"
            android:text="@string/simpan"
            android:textColor="#FFF"/>
    </LinearLayout>

</LinearLayout>