<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginTop="6dp"
    android:id="@+id/cv_buku">

    <RelativeLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="6dp">
        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/judul_buku"
            android:fontFamily="@font/montserrat_extra_bold"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/penerbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/penerbit"
            android:fontFamily="@font/montserrat_black_italic"
            android:layout_below="@id/judul"/>
        <TextView
            android:id="@+id/penulis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/penulis"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true"/>
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_toLeftOf="@id/btn_hapus"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:background="#FFF"/>
        <ImageButton
            android:id="@+id/btn_hapus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_delete_red_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="#FFF"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>