<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailBukuActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/AppTheme.AppBarOverlay"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_judul"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorAccent"
            android:text="@string/judul_buku"/>
        <TextView
            android:id="@+id/karya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="Karya:"
            android:fontFamily="@font/montserrat_medium"
            android:layout_below="@id/tv_judul"/>
        <TextView
            android:id="@+id/tv_penulis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/penulis"
            android:fontFamily="@font/montserrat_black_italic"
            android:layout_below="@id/tv_judul"
            android:layout_toRightOf="@id/karya"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/tv_penerbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/penerbit"
            android:fontFamily="@font/montserrat_black_italic"
            android:layout_below="@id/karya"/>
    </RelativeLayout>

</LinearLayout>